--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     </header>
 
     <!--Parte principal. Para la pastilla azul de fondo he usado clases de Bootstrap-->
-    <main class="container-fluid mx-1 pt-md-4 mt-lg-8">
+    <main class="container-fluid mx-1 pt-md-4 mt-8">
         <section class="row">
             <div class="col-12 col-md-5 col-lg-6 position-relative order-md-2">
-                <img src="./img/illustration-hero.svg" style="z-index: 3" alt="The simple Bookmark Manager landing page"
+                <img src="./img/illustration-hero.svg" style="z-index: 2" alt="The simple Bookmark Manager landing page"
                     class="img-fluid pb-4 position-relative" />
                 <span class="bg-primary rounded-pill rounded-end position-absolute bottom-0 end-0 w-75 h-75"
                     style="z-index: 1"></span>
