--- a/index.html
+++ b/index.html
@@ -214,6 +214,57 @@
                 </div>
             </div>
         </section>
+
+        <!--Ejercicio 3-->
+        
+        <section class="container-xl mt-4 mb-5">
+			<div class="row">
+				<div class="col-12 col-lg-6 mx-auto text-center mt-1 px-1">
+					<h3>Download the extension</h3>
+					<p class="text-black-50  mx-lg-0 mt-2 mb-1 mt-lg-4">We've got more browsers in the pipeline.
+						Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+				</div>
+			</div>
+			<div class="row flex-column flex-lg-row justify-content-center align-items-center text-center mt-1 mt-lg-0">
+				<div class="col-12 col-lg-3">
+					<div class="card shadow rounded-3 mx-auto mt-0" id="card1">
+						<img src="./img/logo-chrome.svg" class="card-img-top mt-5 img-size mx-auto"
+							alt="Chrome logo">
+						<div class="card-body">
+							<h5 class="card-title mt-3">Add to Chrome</h5>
+							<p class="card-text mb-4 text-black-50">Minimum version 62</p>
+							<img src="./img/bg-dots.svg" alt="dots-line" class="w-100">
+							<a href="#" class="btn btn-primary mt-3 mb-2 px-4 py-2">Add & Install Extension</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-lg-3 mt-5 mt-lg-0">
+					<div class="card shadow rounded-3 mx-auto" id="card2">
+						<img src="./img/logo-firefox.svg" class="card-img-top mt-5 img-size mx-auto"
+							alt="Chrome logo">
+						<div class="card-body">
+							<h5 class="card-title mt-3">Add to Firefox</h5>
+							<p class="card-text mb-4 text-black-50">Minimum version 55</p>
+							<img src="./img/bg-dots.svg" alt="dots-line" class="w-100">
+							<a href="#" class="btn btn-primary mt-3 mb-2 px-4 py-2">Add & Install Extension</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-lg-3 mt-5 mt-lg-0">
+					<div class="card shadow rounded-3 mx-auto" id="card3">
+						<img src="./img/logo-opera.svg" class="card-img-top mt-5 img-size mx-auto" alt="Chrome logo">
+						<div class="card-body">
+							<h5 class="card-title mt-3">Add to Opera</h5>
+							<p class="card-text mb-4 text-black-50">Minimum version 46</p>
+							<img src="./img/bg-dots.svg" alt="dots-line" class="w-100">
+							<a href="#" class="btn btn-primary mt-3 mb-2 px-4 py-2">Add & Install Extension</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+        
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
