--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!--Cabecera/Menú-->
     <header>
         <!--Menú versión móvil-->
-        <nav id="mobile-nav" class="container-fluid p-4">
-            <div class="d-flex justify-content-between mb-5 px-1">
+        <nav id="mobile-nav" class="container-fluid p-4 z-index:2">
+            <div class=" justify-content-between mb-5 px-1">
                 <a class="mobile-nav-logo" href="#">
                     <img src="./img/logo-bookmark-negative.svg" />
                 </a>
@@ -48,7 +48,7 @@
             </ul>
         </nav>
         <div class="container-fluid pt-2 pt-lg-3">
-            <nav class="fixed-top navbar navbar-expand-lg bg-body px-3 px-lg-1 pt-4 pt-lg-2 pb-3">
+            <nav class="fixed-top navbar navbar-expand-lg bg-body px-3 px-lg-1 pt-4 pt-lg-2 pb-3 ">
                 <div class="container-xl">
                     <a href="#" title="Bookmark">
                         <img class="d-block" src="./img/logo-bookmark.svg" alt="Bookmark" />
@@ -217,7 +217,7 @@
 
         <!--Ejercicio 3-->
         
-        <section class="container-xl mt-4 mb-5">
+        <section class="container-xl mt-4 mb-5 mt-lg-1">
 			<div class="row">
 				<div class="col-12 col-lg-6 mx-auto text-center mt-1 px-1">
 					<h3>Download the extension</h3>
@@ -334,6 +334,55 @@
         
     </main>
 
+<!--Nivel 2 Ejercicio 5-->
+    <footer>
+		<div class="container-fluid text-bg-primary mt-5">
+			<div class="container-xl pt-4 pb-4">
+				<div class="row justify-content-center text-center">
+					<div class="col-12 col-lg-6 mt-4 mt-lg-3 mb-4">
+						<p class="text-uppercase p-footer mb-lg-4">35.000+ already joined</p>
+						<h3 class="px-3 px-lg-4">Stay up-to-date with what we're doing</h3>
+					</div>
+				</div>
+				<form class="row justify-content-center align-items-center text-center mx-4 rounded-2 gx-2  needs-validation mb-lg-4" novalidate>
+					<div class="col-12 col-lg-4">
+						<input type="email" class="form-control p-2" id="user-email" aria-describedby="emailHelp" placeholder="Enter your e-mail address" required>
+						<div class="invalid-feedback text-light bg-danger rounded-bottom mt-0 p-2 text-start">
+							Enter a valid e-mail address!
+						</div>
+					</div>
+					<div class="col-12 col-lg-2 mb-3 mb-lg-0 mt-3 mt-lg-0">
+						<button type="submit" class="btn btn-secondary w-100 text-white p-2">Contact Us</button>
+					</div>
+				</form>
+			</div>
+		</div>
+		<!-- navBar footer -->
+		<div class="container-fluid bg-dark">
+			<div class="container-xl pt-4 pt-lg-2 pb-4 pb-lg-2">
+				<ul class="nav flex-column flex-lg-row align-items-center text-uppercase text-white py-3 ms-lg-5">
+					<li class="nav-item">
+						<a class="navbar-brand" href="#">
+						<img src="./img/logo-bookmark-light.svg" alt="logo Bookmark" height="20" class="mb-lg-1"></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white mt-4 mt-lg-0 ms-lg-5" href="#">features</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white mt-3 mb-3 mt-lg-0 mb-lg-0" href="#">pricing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-white mb-4 mb-lg-0" href="#">contact</a>
+					</li>
+					<li class="nav-item d-inline mt-2 mt-lg-0 mb-lg-2 ms-lg-auto me-lg-5">
+						<a class="ps-0 pe-3" href="#"><img src="./img/icon-facebook.svg" alt="facebook-icon" height="19"></a>
+						<a class="ps-3 pe-0" href="#"><img src="./img/icon-twitter.svg" alt="twitter-icon" height="18"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
@@ -354,6 +403,28 @@
             })
         );
     </script>
+    <!--Javascript validación formulario-->
+    <script>
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+		(() => {
+			'use strict'
+
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			const forms = document.querySelectorAll('.needs-validation')
+
+			// Loop over them and prevent submission
+			Array.from(forms).forEach(form => {
+				form.addEventListener('submit', event => {
+					if (!form.checkValidity()) {
+						event.preventDefault()
+						event.stopPropagation()
+					}
+
+					form.classList.add('was-validated')
+				}, false)
+			})
+		})()
+	</script>
 </body>
 
 </html>
