--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
 						<a class="nav-link text-white mb-4 mb-lg-0" href="#">contact</a>
 					</li>
 					<li class="nav-item d-inline mt-2 mt-lg-0 mb-lg-2 ms-lg-auto me-lg-5">
-						<a class="ps-0 pe-3" href="#"><img src="./img/icon-facebook.svg" alt="facebook-icon" height="19"></a>
-						<a class="ps-3 pe-0" href="#"><img src="./img/icon-twitter.svg" alt="twitter-icon" height="18"></a>
+						<a class="ps-0 pe-3" href="#"><img src="./img/icon-facebook.svg" class="social-icon" alt="facebook-icon" height="19"></a>
+						<a class="ps-3 pe-0" href="#"><img src="./img/icon-twitter.svg" class="social-icon" alt="twitter-icon" height="18"></a>
 					</li>
 				</ul>
 			</div>
