--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 						Please do let us know if you've got a favourite you'd like us to prioritize.</p>
 				</div>
 			</div>
-			<div class="row flex-column flex-lg-row justify-content-center align-items-center text-center mt-1 mt-lg-0">
+			<div class=" card-adapt row flex-column flex-lg-row justify-content-center align-items-center text-center mt-1 mt-lg-0">
 				<div class="col-12 col-lg-3">
 					<div class="card shadow rounded-3 mx-auto mt-0" id="card1">
 						<img src="./img/logo-chrome.svg" class="card-img-top mt-5 img-size mx-auto"
