--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./sass/custom.css" />
+    <link rel="stylesheet" href="./sass/reducido.css" />
     <title>Sprint 2</title>
   </head>
 
