--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/reducido.css" />
-    <title>Sprint 2</title>
+    <title>Sprint 2 OK</title>
   </head>
 
   <body>
